# D3GA

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  globus.py  install.sh  renderer.py  requirements.txt  test.py  train.py
assets/: simplified.ply  simplified_index.npy
cager/: ops.py
configs/: actorshq_actor02.yml  goliath_axe184.yml
datasets/: __init__.py  actorshq_dataset.py  goliath_dataset.py
lbsmodel/: body_model.py  quaternion.py
lib/: batch.py  blueman.py  cage.py  cage_blueman.py  cage_smplman.py  calibration.py  cameras.py  segmentation.py  smplman.py  tet_mesh.py  tetgen.py
models/: cage_net.py  color_calib.py  embeddings.py  garment_net.py  learnable_blur.py  mesh_net.py  mlp.py  trainer.py  utils.py
recorder/: heatmap.py  mesh_renderer.py  pc_renderer.py
submodules/tetrahedralize/: CMakeLists.txt  main.cpp
submodules/tetrahedralize/cmake/: libigl.cmake
submodules/tetrahedralize/include/tet/: generator.h  tetrahedron.h
submodules/tetrahedralize/src/: generator.cpp
utils/: cager.py  camera_utils.py  data_utils.py  general_utils.py  geometry.py  graphics_utils.py  image_utils.py  load_module.py  loss_utils.py  mesh_utils.py  pca_utils.py  pos_encoder.py  sh_rotate.py  sh_utils.py  text_helpers.py  timers.py
